Fix search sidebar min-height to avoid scrollbar

--- a/client/css/_sidebar.styl
+++ b/client/css/_sidebar.styl
@@ -7,7 +7,7 @@
   padding 10px
   border-left 1px solid #dee7e9
   padding-bottom 30px
-  min-height 600px
+  min-height 640px
   top 0
   bottom 0
 
